--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,10 +38,10 @@ assetic:
             bin: /usr/local/bin/coffee
             node: /usr/local/bin/node
             apply_to: "\.coffee$"
-        #closure:
-        #    jar: %kernel.root_dir%/Resources/java/compiler.jar
-        #yui_css:
-        #    jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
+        closure:
+            jar: %kernel.root_dir%/Resources/java/compiler.jar
+        yui_css:
+            jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
 
 # Doctrine Configuration
 doctrine:
