Extract node and coffee paths.

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -15,3 +15,7 @@ parameters:
     secret:            ThisTokenIsNotSoSecretChangeIt
 
     contact_email:
+
+    node:
+    node_paths:
+    coffee:
