--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -31,12 +31,12 @@ assetic:
     filters:
         cssrewrite: ~
         less:
-            node: /usr/local/bin/node
-            node_paths: [/usr/local/lib/node_modules]
+            node: %node%
+            node_paths: %node_paths%
             apply_to: "\.less$"
         coffee:
-            bin: /usr/local/bin/coffee
-            node: /usr/local/bin/node
+            bin: %coffee%
+            node: %node%
             apply_to: "\.coffee$"
         closure:
             jar: %kernel.root_dir%/Resources/java/compiler.jar
