--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -30,16 +30,19 @@ assetic:
     #java: /usr/bin/java
     filters:
         cssrewrite: ~
-        less:
-            node: %node%
-            node_paths: %node_paths%
-            apply_to: "\.less$"
         coffee:
             bin: %coffee%
             node: %node%
             apply_to: "\.coffee$"
-        closure:
-            jar: %kernel.root_dir%/Resources/java/compiler.jar
+        less:
+            node: %node%
+            node_paths: %node_paths%
+            apply_to: "\.less$"
+        uglifyjs:
+            bin:  %uglify%
+            node: %node%
+        #closure:
+        #    jar: %kernel.root_dir%/Resources/java/compiler.jar
         yui_css:
             jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
 
