Added a new bundle to set base url (cli application don't have it).

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -77,3 +77,7 @@ services:
             - { name: doctrine.event_subscriber, connection: default }
         calls:
             - [ setAnnotationReader, [ @annotation_reader ] ]
+
+# FRosas
+frosas_base_url:
+    base_url: %base_url%
