--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -37,14 +37,15 @@ assetic:
         less:
             node: %node%
             node_paths: %node_paths%
+            compress: true
             apply_to: "\.less$"
         uglifyjs:
             bin:  %uglify%
             node: %node%
         #closure:
         #    jar: %kernel.root_dir%/Resources/java/compiler.jar
-        yui_css:
-            jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
+        #yui_css:
+        #    jar: %kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar
 
 # Doctrine Configuration
 doctrine:
